charts/goke-okteto/service.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: goke
spec:
  type: ClusterIP
  selector:
    app: goke
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
